Migracion de usuarios DONE!

--- a/src/main/resources/i18n/i18nmessages_en_EN.properties
+++ b/src/main/resources/i18n/i18nmessages_en_EN.properties
@@ -15,6 +15,7 @@ menu.videosvistos=Watched Videos
 menu.usuarios=Users
 menu.usuariosactivos=Active Users
 menu.usuarioseliminados=Deleted Users
+backoffice.insertarusuarios=Insert users
 backoffice.detalles=View Details
 frontoffice.videos=My Videos
 frontoffice.miperfil=My Profile
