--- a/src/main/resources/i18n/i18nmessages_es_ES.properties
+++ b/src/main/resources/i18n/i18nmessages_es_ES.properties
@@ -15,6 +15,7 @@ menu.videosvistos=Videos Visitados
 menu.usuarios=Usuarios
 menu.usuariosactivos=Usuarios Activos
 menu.usuarioseliminados=Usuarios Eliminados
+backoffice.insertarusuarios=Insertar usuarios
 backoffice.detalles=Ver Detalle
 frontoffice.videos=Mis Videos
 frontoffice.miperfil=Mi Perfil
