--- a/src/main/resources/i18n/i18nmessages_eu_ES.properties
+++ b/src/main/resources/i18n/i18nmessages_eu_ES.properties
@@ -15,6 +15,7 @@ menu.videosvistos=Bideo Ikusitak
 menu.usuarios=Erabiltzaileak
 menu.usuariosactivos=Erabiltzaile Aktiboak
 menu.usuarioseliminados=Erabiltzaile Ezabatutak
+backoffice.insertarusuarios=Erabiltzaileak txertatu
 backoffice.detalles=Ikusi xehetasunak
 frontoffice.videos=Nire Bideoak
 frontoffice.miperfil=Nire Profila
